--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,21 +23,22 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd ml_app
+          cd projet/ml_app
           pip install -r requirements.txt
 
       - name: Run tests
         run: |
-          cd ml_app
+          cd projet/ml_app
           python -m unittest discover tests  # Découvre et exécute tous les tests dans le dossier 'tests'
 
       - name: Train model
         run: |
-          cd ml_app
+          cd projet/ml_app
           python train.py  # Entraînement du modèle
 
       - name: Build Docker image
         run: |
+          cd projet
           docker build -t my_ml_app ./ml_app  # Crée une image Docker pour l'application
 
       - name: Push Docker image to Docker Hub (ou autre registry)
