--- a/projet/ml_app/Dockerfile
+++ b/projet/ml_app/Dockerfile
@@ -2,16 +2,22 @@
 FROM python:3.9-slim
 
 # Installer les dépendances nécessaires
-RUN pip install flask numpy scikit-learn joblib
+RUN apt-get update && apt-get install -y \
+    supervisor && \
+    pip install flask numpy scikit-learn joblib mlflow && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Créer le répertoire de travail de l'application
+# Créer les dossiers nécessaires
+RUN mkdir -p /app /var/log/supervisor
+
+# Copier les fichiers nécessaires
 WORKDIR /app
+COPY app.py /app/
+COPY house_price_model.pkl /app/
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# Copier le fichier app.py dans le conteneur
-COPY app.py /app
+# Exposer les ports pour Flask et MLflow
+EXPOSE 8000 8001
 
-# Exposer le port 5000 pour accéder à l'application Flask
-EXPOSE 5000
-
-# Commande pour démarrer l'application Flask
-CMD ["python", "app.py"]
+# Lancer supervisord pour gérer plusieurs processus
+CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
