--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -26,15 +26,20 @@ jobs:
           cd projet/ml_app
           pip install -r requirements.txt
 
-      - name: Run tests
+      - name: Run unit tests
         run: |
           cd projet/ml_app
-          python -m unittest discover tests  # Découvre et exécute tous les tests dans le dossier 'tests'
+          python -m unittest discover tests  # Découvre et exécute les tests
 
-      - name: Train model
+      - name: Train model and log with MLflow
         run: |
           cd projet/ml_app
-          python train.py  # Entraînement du modèle
+          python train.py  # Script d'entraînement avec intégration MLflow
+
+      - name: Validate model with MLflow
+        run: |
+          cd projet/ml_app
+          python validate_model.py  # Validation du modèle enregistré avec MLflow
 
       - name: Build Docker image
         run: |
