--- a/projet/ml_app/supervisord.conf
+++ b/projet/ml_app/supervisord.conf
@@ -1,10 +1,18 @@
 [supervisord]
 nodaemon=true
+logfile=/app/logs/supervisord.log
+
+[program:flask]
+command=python /app/app.py
+autostart=true
+autorestart=true
+stderr_logfile=/app/logs/flask.log
+stdout_logfile=/app/logs/flask.log
 
 [program:mlflow]
 command=mlflow ui --host 0.0.0.0 --port 8001
+autostart=true
 autorestart=true
+stderr_logfile=/app/logs/mlflow.err.log
+stdout_logfile=/app/logs/mlflow.out.log
 
-[program:flask_app]
-command=python app.py
-autorestart=true
